--- a/week02/week2assignment.ipynb
+++ b/week02/week2assignment.ipynb
@@ -9,7 +9,7 @@
     "## Data Exploration\n",
     "My name is Angie (Evangeline Chapman) and I'm exploring data.\n",
     "## Due January 21st\n",
-    "The purpose of this assignment is to explore a data set. I'm interested in exploring data set because..."
+    "The purpose of this assignment is to explore a data set. I'm interested in exploring this data set on affordable housing in LA because I'm passionate about providing affordable housing to low-income families and individuals."
    ]
   },
   {
